--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "laravel/tinker": "^2.8",
         "league/flysystem-aws-s3-v3": "^3.0",
         "mcamara/laravel-localization": "^1.8",
+        "mindscms/laravelshoppingcart": "^2.1",
         "prettus/l5-repository": "^2.9",
         "santigarcor/laratrust": "^8.2",
         "spatie/laravel-backup": "^8.4",
