integrate with paypal payment gateway

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "santigarcor/laratrust": "^8.2",
         "spatie/laravel-backup": "^8.4",
         "spatie/laravel-medialibrary": "^10.15",
+        "srmklive/paypal": "~3.0",
         "tucker-eric/eloquentfilter": "^3.2",
         "tymon/jwt-auth": "^2.1"
     },
